--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/manip426/Movies_API#readme",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.3",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
